--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,5 @@
-langchain
-langchain-google-genai
-google-generativeai
-sentence-transformers
-transformers
-huggingface-hub
-faiss-cpu
-streamlit
-unstructured
-python-docx
-python-dotenv
-tqdm
-jinja2
-sqlite-utils
-sqlalchemy
-langchain-community
-
-streamlit 
-pandas 
-sqlite3
+langchain>=0.1.0
+langchain-google-genai>=1.0.0
+langgraph>=0.0.20
+pydantic>=2.0.0
+google-generativeai>=0.3.0
